# school-bell

./: .gitignore  GUIDE.rst  LICENSE  MANIFEST.in  MOPIDY.rst  README.rst  RPi-setup-guide.rst  RPi-setup.rst  config.json  demo.json  demo.service  environment.yml  pyproject.toml  school-bell.service  setup.cfg
.github/workflows/: python-app.yml  tests.yml
docs/: ALSA.rst  GUIDE.rst  MOPIDY.rst
school_bell/: config.json  openholidays.py  school-bell.service  school_bell.py  util.py
src/school_bell/: __init__.py  main.py  openholidays.py  school_bell.py  util.py  utils.py
tests/: conftest.py  test_openholidays.py  test_school_bell.py  test_utils.py
