[metadata]
name = school_bell
description = Python scheduled ringing of the school bell
long_description = file: README.rst
long_description_content_type = text/x-rst; charset = UTF-8
url = https://github.com/psmsmets/school-bell
author = Pieter Smets
author_email = mail@pietersmets.be
maintainer  = Pieter Smets
maintainer_email = mail@pietersmets.be
license = 'MIT license'
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: MIT license 
    Operating System :: Unix
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Education
keywords = unix, automation, bell, gpio
project_urls =
    Source = https://github.com/psmsmets/school-bell
    Tracker = https://github.com/psmsmets/school-bell/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.6
install_requires =
    gpiozero>=1.6
    schedule>=1.1.0
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    school-bell = school_bell.school_bell:main

[options.data_files]
share/school-bell =
    config.json

[bdist_wheel]
universal = true
